# otterlang

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  F-STRING-LIMITATION.md  IMPROVEMENTS.md  README.md  flake.nix  plan.md  structure.md  test_async.otter  test_fstr.otter  test_lsp.ot
.github/workflows/: ci.yml  release.yml
Users/Next-Level/Downloads/GeekIR/: CMakeLists.txt  INTEGRATION.md  LICENSE  Makefile.integration  README.md  geekir.h
Users/Next-Level/Downloads/GeekIR/cmake/: FindGeekIR.cmake  GeekIRConfig.cmake.in
Users/Next-Level/Downloads/GeekIR/examples/: CMakeLists.txt  basic_example.c  control_flow_example.c  function_example.c  optimization_example.c  serialization_example.c
Users/Next-Level/Downloads/GeekIR/include/: geekir.h
Users/Next-Level/Downloads/GeekIR/include/internal/: common.h
Users/Next-Level/Downloads/GeekIR/src/: analysis.c  basic_block.c  builder.c  context.c  dumper.c  function.c  instructions.c  module.c  reader.c  transforms.c  types.c  utils.c  values.c  writer.c
Users/Next-Level/Downloads/GeekIR/tests/: CMakeLists.txt  test_analysis.c  test_basic_block.c  test_builder.c  test_context.c  test_function.c  test_instructions.c  test_module.c  test_runner.c  test_serialization.c  test_transforms.c  test_types.c  test_utils.c  test_values.c
Users/Next-Level/Downloads/ItsBasicUefi/: .gitconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
Users/Next-Level/Downloads/ItsBasicUefi/Examples/CryptoDemo/: main.c  project.ubuild
Users/Next-Level/Downloads/ItsBasicUefi/Examples/GraphicsInput/: main.c  project.ubuild
Users/Next-Level/Downloads/ItsBasicUefi/Examples/HelloWorld/: main.c  project.ubuild
Users/Next-Level/Downloads/ItsBasicUefi/Examples/OvmfDetect/: main.c  project.ubuild
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Acpi/: project.ubuild
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Acpi/include/: acpi.h
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Acpi/src/: acpi.c
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Build/: main.c  project.ubuild
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Core/: project.ubuild
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Core/include/: uefi.h  uefi_lib.h
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Core/src/: uefi_lib.c
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Crypto/: project.ubuild
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Crypto/include/: crypto.h
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Crypto/src/: crypto.c
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.FileSystem/: project.ubuild
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.FileSystem/include/: filesystem.h
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.FileSystem/src/: filesystem.c
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Graphics/: project.ubuild
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Graphics/include/: graphics.h
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Graphics/src/: graphics.c
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Input/: project.ubuild
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Input/include/: input.h
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Input/src/: input.c
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Network/include/: network.h
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Network/src/: network.c
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Ovmf/: project.ubuild
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Ovmf/include/: ovmf.h
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Ovmf/src/: ovmf.c
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.StdLib/: project.ubuild
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.StdLib/include/: stdio.h  stdlib.h  string.h
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.StdLib/src/: stdio.c  stdlib.c  string.c
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Timer/: project.ubuild
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Timer/include/: timer.h
Users/Next-Level/Downloads/ItsBasicUefi/Uefi.Timer/src/: timer.c
crates/ast/src/: nodes.rs
crates/ffi/examples/: coverage_analysis.rs  debug_rustdoc.rs
crates/ffi/src/: dynamic_loader.rs  rust_stubgen.rs  (+1 more)
docs/: API_REFERENCE.md  EXAMPLES.md  FFI_GUIDE.md  GETTING_STARTED.md  LANGUAGE_SPEC.md  ROADMAP.md  STDLIB.md  TUTORIALS.md  WEBASSEMBLY.md
examples/: benchmark.sh  compare_strings.otter  encoding_edge_cases.otter  encoding_test.otter  ffi_test.otter  fstring_advanced.otter  fstring_complex.otter  fstring_comprehensive.otter  fstring_numeric.otter  fstring_test.otter  generics.ot  json_bridge.otter  rand_demo.otter  rayon_demo.otter  simple_print.otter  vector_demo.otter
examples/basic/: advanced_pipeline.ot  enum_demo.ot  error_handling_advanced.ot  error_handling_basics.ot  error_handling_resource.ot  error_handling_validation.ot  exception_advanced.ot  exception_basics.ot  exception_resource.ot  exception_validation.ot  hello.ot  multiline_test.ot  task_benchmark.ot
examples/ffi/: test_ffi_struct.ot
ffi/chrono/: bridge.yaml
ffi/libm/: bridge.yaml
ffi/nalgebra/: bridge.yaml
ffi/otterlang_ffi_demo/: Cargo.toml  bridge.yaml
ffi/rand/: bridge.yaml
ffi/rayon/: bridge.yaml
ffi/serde_json/: bridge.yaml
src/: cli.rs  lib.rs  main.rs
src/ast/: nodes.rs
src/cache/: manager.rs
src/codegen/: llvm.rs  target.rs
src/ffi/: cargo_bridge.rs  metadata.rs  mod.rs  rust_stubgen.rs  symbol_registry.rs
src/fmt/: formatter.rs
src/lexer/: token.rs  tokenizer.rs
src/lsp/: mod.rs
src/parser/: grammar.rs
src/runtime/: ffi.rs  mod.rs  strings.rs  symbol_registry.rs
src/test/: discovery.rs  mod.rs  reporter.rs  runner.rs  snapshot.rs
src/tools/: profiler.rs
src/typecheck/: checker.rs
src/utils/: bench.rs  errors.rs
stdlib/otter/: builtins.ot  fmt.ot  fs.ot  http.ot  io.ot  json.ot  math.ot  net.ot  rand.ot  runtime.ot  task.ot  time.ot
tests/: gc_stress.ot
vscode-extension/: README.md  biome.json  language-configuration.json  package-lock.json  package.json
vscode-extension/snippets/: otterlang.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: otterlang.tmLanguage.json
(+70 files in other folders)
